My html project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Tilt+Prism&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&family=Tilt+Prism&display=swap" rel="stylesheet">
+<link rel="icon" href="./images/logo.png">
 </head>
 <body>
     <div class="header">
@@ -22,5 +26,16 @@
         <p style="padding: 30px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aliquam, ipsam officia soluta corporis tempora porro facere maiores iusto iste ipsa vel aut quibusdam fugiat libero dolor explicabo enim suscipit?</p>
     </div>
     </div>
+<div class="bg">
+    <center>
+<img src="./images/pexels-inga-seliverstova-3589903.jpg" width="300px" style="border-radius: 9px;">
+</center>
+<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, distinctio!</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, fugit totam sunt rerum possimus architecto, ipsa perspiciatis voluptas quia itaque repellendus maiores nulla amet nam temporibus, nisi enim quis porro? Dolores blanditiis quaerat quos dicta laborum soluta libero eveniet repellendus repudiandae voluptatem, ratione quam magni consectetur accusantium dolorem iusto voluptatum eaque nisi ea quibusdam. Molestiae cupiditate voluptatem iste unde provident placeat nihil! Totam numquam accusantium dolorem fugiat at sunt impedit nihil maxime, ad delectus eum dolores commodi aut cupiditate, veritatis aspernatur. Facere vero, deserunt ducimus corrupti ratione quos magni perspiciatis porro inventore omnis, tempora iusto quibusdam repudiandae vitae dignissimos libero. Tenetur dicta natus quos expedita architecto fugiat et ea eius minus. Doloremque laboriosam saepe illo ex omnis deleniti fugiat recusandae voluptatem fugit veniam? Ullam non fugiat accusantium repellendus doloremque possimus odit natus a libero perspiciatis laborum recusandae, nisi ipsa nam minima assumenda, eius autem, beatae eum odio quod obcaecati temporibus hic maiores! Laudantium excepturi magnam culpa facilis minus sapiente quos earum sequi nihil porro non, cupiditate placeat sed nesciunt consequuntur deleniti, hic perspiciatis iste reprehenderit quod molestiae saepe esse repudiandae omnis? Quas, ab alias veritatis ea numquam, debitis laboriosam consequatur et fugit voluptates totam quaerat possimus iste magnam a eveniet.</p>
+</div>
+
+<div class="footer">
+<p>Copyright @2023</p>
+</div>
 </body>
 </html>
